# nodelet_template

./: CMakeLists.txt  package.xml
launch/: nodelet_template.launch
plugins/: nodelet_plugins.xml
src/: nodeletclass.cpp  nodeletclass.h
